# memoir

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  app.py  db.py  index.html  launch-video.html  local-api.js  migrate.py  requirements.txt  run.sh  style.css  vercel.json
.github/workflows/: pages.yml  release.yml
api/: index.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
static/: index.html  landing.html  privacy.html  script.js  style.css  terms.html
web/: index.html  local-api.js  script.js  style.css
