[package]
name = "memoir"
version = "0.1.1"
description = "Memoir — your AI-powered second brain. Runs 100% locally."
authors = ["Javohir Akramov"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "memoir_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
